[project]
name = "panoptibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "propel-client>=0.0.3",
    "python-dotenv>=1.1.0",
    "python-telegram-bot[job-queue]==21.11.1",
    "pyyaml>=6.0.2",
    "ruff>=0.11.4",
]
